# RSE

./: .dockerignore  .gitignore  COMPREHENSIVE_RSE_REVIEW.md  CONTRIBUTING.md  Dockerfile  EXECUTIVE_SUMMARY.md  LAUNCH_PLAN.md  LICENSE  PROJECT_STATUS.md  README.md  README_OLD.md  RSE_FINAL_SUMMARY.md  RSE_REVIEW_INDEX.md  RSE_TODAY_SUMMARY.md  TASK_SUMMARY.md  TEST_VALIDATION_REPORT.md  build_wasm.ps1  quick_test.sh  rse_endurance_test.csv  rse_py_telemetry.csv  rse_telemetry_deep.csv  rse_telemetry_deep_v2.csv  run_genesis_setup.ps1  simple_ci_test.sh
.github/workflows/: ci.yml
COG/cli/: package-lock.json  package.json  tsconfig.json
COG/genesis/: cog.json
COG/genesis_cpp/: Bindings.cpp  Universe.cpp  Universe.h
COG/visor/: index.html  package-lock.json  package.json
COG/wasm/: Dockerfile
benchmarks/: linux_baseline.json  linux_baseline.py  rse_kernel.cpp  rse_kernel.py  uefi_bench.csv  uefi_bench.json
boot/: Makefile  Makefile.grub  Makefile.uefi  fetch_limine.sh  grub.cfg  init.c  kernel.c  kernel_os.cpp  limine.conf  linker.ld  net_projection.cpp  net_projection.h  rse_boot.h  rse_syscalls.h  uefi_loader.c  uefi_loader.ld
data/: rse_scientific_validation.csv
docs/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARK_HARNESS.md  CI_CD_WORKFLOW.md  GETTING_STARTED.md  OS_ALIGNMENT.md  OS_ROADMAP.md  PHASE3_COMPLETION_REPORT.md  REPO_MAP.md  RSE_Status_Report.md  RSE_Whitepaper.md  TROUBLESHOOTING.md  The General Theory of Recursive Symbolic.md  VALIDATION.md  VALIDATION_RESULTS.md  grey_compiler_architecture.md  grey_language_spec.md  rdl_paper.tex
docs/braidshell_demos/: README.md  info.html  perf.html  torus.html  welcome.html
docs/design/: BRAIDED_RSE_FINAL_REPORT.md  BRAIDED_TORUS_DESIGN.md  RSE_BRAIDED_TORUS_ANALYSIS.md  RSE_PROJECTION_EXCHANGE_SPEC.md  RSE_PROJECTION_TASK_MAP.md
docs/phase_reports/: RSE_PHASE2_COMPLETE.md  (+6 more)
go/: README.md  bettirdl.go  go.mod
grey_compiler/: Cargo.toml  README.md  fix_issues.py  fix_issues_simple.py  fix_issues_v2.py  simple_test.grey  sir_demo_betti.rs  test_keyword_params.grey
grey_compiler/crates/grey_backends/: Cargo.toml
grey_compiler/crates/grey_backends/src/: betti_rdl.rs  lib.rs
grey_compiler/crates/grey_harness/: Cargo.toml
grey_compiler/crates/grey_harness/src/: lib.rs  main.rs
grey_compiler/crates/grey_ir/: Cargo.toml
grey_compiler/crates/grey_ir/src/: lib.rs
grey_compiler/crates/grey_lang/: Cargo.toml
grey_compiler/crates/grey_lang/src/: ast.rs  constraints.rs  diagnostics.rs  lexer.rs  lib.rs  parser.rs  types.rs
grey_compiler/crates/greyc_cli/: Cargo.toml
grey_compiler/crates/greyc_cli/src/: main.rs
grey_compiler/examples/: logistics.grey  sir_demo.grey
grey_compiler/scripts/: comparison_harness.rs
grey_compiler/tests/: betti_integration.rs  integration_tests.rs  pipeline_end_to_end.rs
nodejs/: README.md  betti_rdl.cpp  binding.gyp  configure_binding.sh  example.js  index.d.ts  index.js  package-lock.json  package.json  test.js
python/: README.md  betti_rdl_bindings.cpp  example.py  pyproject.toml  setup.py
python/betti_rdl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/tests/: test_end_to_end.py
rust/: Cargo.toml  README.md  build.rs
rust/examples/: basic.rs  telemetry.rs
rust/src/: lib.rs
scripts/: parse_uefi_bench.py  run_binding_matrix.sh  run_full_system_test.sh  run_linux_baseline.sh  run_projection_exchange.sh  run_proof.sh  run_uefi_bench.sh  send_udp_http.py
src/cpp_kernel/: Allocator.h  CMakeLists.txt  FixedStructures.h  Microkernel.cpp  ToroidalSpace.h  benchmark_phase4  benchmark_simple  betti_rdl_c_api.cpp  betti_rdl_c_api.h  braidshell  minimal_test  test_io  test_memory  test_phase2  test_phase3  test_scheduler  test_syscalls  test_vfs  wrapper_test
src/cpp_kernel/benchmarks/: benchmark_harness.cpp  stress_test.cpp
src/cpp_kernel/braided/: BettiRDLKernelExtended.h  BettiRDLKernelExtensions.h  BraidCoordinator.h  BraidedKernel.h  BraidedKernelV2.h  BraidedKernelV3.h  CMakeLists.txt  CMakeLists_Phase2.txt  PHASE2_DESIGN.md  PHASE3_DESIGN.md  PHASE4_DESIGN.md  Projection.h  ProjectionV2.h  ProjectionV3.h  README.md  TorusBraid.h  TorusBraidV2.h  TorusBraidV3.h  TorusBraidV4.h
src/cpp_kernel/braided/build_codex/: CMakeCache.txt  Makefile  braided_demo  cmake_install.cmake
src/cpp_kernel/braided/build_phase2/: CMakeCache.txt  Makefile  cmake_install.cmake
src/cpp_kernel/build_codex/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  os_userspace_init
src/cpp_kernel/core/: ToroidalSpace.h
src/cpp_kernel/demos/: BettiRDLCompute.h  BettiRDLKernel.h  HanoiSolver.h  RSENativeHanoiSolver.h  adaptive_delay_validation.cpp  benchmark_phase4.cpp  benchmark_phase4_simple.cpp  betti_hanoi_integrated.cpp  betti_rdl_demo.cpp  betti_rdl_stress_test.cpp  braided_demo.cpp  distributed_counter.cpp  hanoi_demo.cpp  minimal_braided_test.cpp  os_userspace_init.cpp  parallel_hanoi_test.cpp  parallel_scaling_test.cpp  rse_native_hanoi.cpp  test_braided_comprehensive.cpp  test_braided_wrapper.cpp  test_io.cpp  test_memory.cpp  test_phase2.cpp  test_phase3.cpp  test_scheduler.cpp  test_syscalls.cpp  test_vfs.cpp
src/cpp_kernel/demos/scale_demos/: grey_sir_reference.cpp  mega_demo.cpp
src/cpp_kernel/os/: BasicDevices.h  BlockDevice.h  BlockFS.h  ConsoleDevice.h  Device.h  ElfLoader.h  FastPathDevice.h  FileDescriptor.h  KernelStubs.h  LoopbackDevice.h  MemFS.h  NetDevice.h  OSProcess.h  PageTable.h  PhysicalAllocator.h  SYSCALL_DESIGN.md  Syscall.h  SyscallDispatcher.h  TorusScheduler.h  VFS.h  VirtualAllocator.h
src/cpp_kernel/single_torus/: BettiRDLCompute.h  BettiRDLKernel.h  README.md
src/cpp_kernel/tests/: allocator_test.cpp  blockfs_test.cpp  c_api_test.c  elf_loader_test.cpp  elf_process_test.cpp  exec_vfs_test.cpp  fixed_structures_test.cpp  killer_demo_memory_test.cpp  memory_telemetry_test.cpp  net_device_test.cpp  sys_dup_test.cpp  sys_kill_test.cpp  sys_mmap_test.cpp  sys_pipe_test.cpp  sys_ps_test.cpp  sys_stat_test.cpp  sys_wait_test.cpp  threadsafe_scheduler_test.cpp
src/cpp_kernel/userspace/: braidshell.cpp
(+28 files in other folders)
