[workspace]
members = [
    "crates/grey_lang",
    "crates/greyc_cli",
    "crates/grey_ir",
    "crates/grey_backends",
    "crates/*",
]

[workspace.dependencies]
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
miette = { version = "5.0", features = ["fancy"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.0"
regex = "1.0"
itertools = "0.12"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true