[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "betti-rdl"
version = "1.0.0"
description = "Space-Time Native Computation Runtime with O(1) Memory"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Gregory Betti", email = "greg@betti.dev"}
]
keywords = ["computation", "recursion", "parallel", "runtime", "rdl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://betti-rdl.dev"
Documentation = "https://docs.betti-rdl.dev"
Repository = "https://github.com/betti-labs/betti-rdl"
"Bug Tracker" = "https://github.com/betti-labs/betti-rdl/issues"
