[package]
name = "grey_backends"
version = "0.1.0"
edition = "2021"

[lib]
name = "grey_backends"
path = "src/lib.rs"

[dependencies]
# IR and language infrastructure
grey_ir = { path = "../grey_ir" }
grey_lang = { path = "../grey_lang" }

# Runtime integration
betti-rdl = { path = "../../../rust" }

# Serialization and utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Logging and error handling
log = "0.4"
miette = { version = "5.0", features = ["fancy"] }

# Testing utilities
pretty_assertions = "1.0"
tempfile = "3.0"