[package]
name = "grey_harness"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grey_compare_sir"
path = "src/main.rs"

[dependencies]
grey_lang = { path = "../grey_lang" }
grey_ir = { path = "../grey_ir" }
grey_backends = { path = "../grey_backends" }

anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
