[package]
name = "grey_ir"
version = "0.1.0"
edition = "2021"

[lib]
name = "grey_ir"
path = "src/lib.rs"

[dependencies]
# Core language types
grey_lang = { path = "../grey_lang" }

# Serialization and data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Diagnostics
miette = { version = "5.0", features = ["fancy"] }