[package]
name = "grey_lang"
version = "0.1.0"
edition = "2021"

[lib]
name = "grey_lang"
path = "src/lib.rs"

[dependencies]
# Core parsing and lexing
logos = "0.14"
rowan = "0.15"
# Diagnostics and error handling
miette = { version = "5.0", features = ["fancy"] }
thiserror = "1.0"
anyhow = "1.0"
# Data structures and utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
itertools = "0.12"
once_cell = "1.0"
# Type system
hashbrown = "0.14"
# Logging
log = "0.4"

[dev-dependencies]
# Testing utilities
tempfile = "3.0"
pretty_assertions = "1.0"

[features]
default = []
parser_trace = []